[package]
name = "launcher"
version = "1.0.0"
edition = "2024"

[dependencies]
semver = "1.0.27"
reqwest = { version = "0.12.28", features = ["blocking", "json", "stream", "rustls-tls"] }
eframe = "0.33.3"
egui_alignments = "0.3.7"
egui_extras = { version = "0.33.3", features = ["image"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
futures-util = "0.3.31"
egui_commonmark = "0.22.0"
app_data = "0.1.1"